--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x:hidden;
+  overflow-x:hidden !important;
+}
+html{
+  overflow: auto;
+  /* width:100vw; */
 }
 *{
   margin: 0;
   padding: 0;
   text-transform: uppercase;
+  /* overflow-x:hidden !important; */
+
 }
 
 code {
