--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
+@import url('http://fonts.cdnfonts.com/css/orator-std');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Orator Std', sans-serif;
+                                                
   overflow-x:hidden !important;
 }
 html{
