--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ html{
   margin: 0;
   padding: 0;
   text-transform: uppercase;
+  font-family: 'Orator Std', sans-serif;
   /* overflow-x:hidden !important; */
 
 }
